@@ -36,10 +36,10 @@ extern struct cmd_list_element *info_record_cmdlist;
 enum record_print_flag
 {
   /* Print the source file and line (if applicable).  */
-  record_print_src_line = (1 << 0),
+  RECORD_PRINT_SRC_LINE = (1 << 0),
 
   /* Print the instruction number range (if applicable).  */
-  record_print_insn_range = (1 << 1),
+  RECORD_PRINT_INSN_RANGE = (1 << 1),
 };
 
 /* Wrapper for target_read_memory that prints a debug message if
