@@ -1,3 +1,10 @@
+2013-09-02  Markus Metzger  <markus.t.metzger@intel.com>
+
+	* record.h (record_print_flag) <record_print_src_line,
+	record_print_insn_range>: Rename into ...
+	(record_print_flag) <record_print_src_line,
+	record_print_insn_range>: ... this.  Update all users.
+
 2013-09-02  Pierre Muller  <muller@sourceware.org>
 
 	* windows-nat.c (windows_xfer_memory): Handle ERROR_PARTIAL_COPY
